# lego

./: CMakeLists.txt  README.md  acp.sh  android_x86.sh  android_x8664.sh  bclient.sh  build.sh  build_android.sh  build_android_v8.sh  client  cp.sh  hcp.sh  ios.toolchain.cmake  lego.sln  lego.vcxproj  lego.vcxproj.filters  restart.sh  tcp_echo_client.cc  vcp.sh
dll/dll/: CMakeLists.txt  Source.def  dll.cpp  dll.vcxproj  dll.vcxproj.filters  dll_interface.cc  dll_interface.h  targetver.h
dll/dll/Debug/: vc141.idb
dll/dll/Release/: lego - 快捷方式.lnk
dll/dll/bft/: CMakeLists.txt  bft_interface.cc  bft_interface.h  bft_manager.cc  bft_utils.h  dispatch_pool.cc  dispatch_pool.h
dll/dll/block/: account_manager.cc  block_manager.cc  block_manager.h  block_utils.h
dll/dll/broadcast/: broadcast.h  filter_broadcast.cc  filter_broadcast.h
dll/dll/client/: client_dht.h  vpn_client.cc  vpn_client.h
dll/dll/common/: bitmap.cc  bitmap.h  bloom_filter.h  config.cc  country_code.h  global_info.cc  global_info.h  hash.h  parse_args.cc  parse_args.h  random.cc  random.h  state_lock.cc  state_lock.h  string_utils.cc  string_utils.h  thread_safe_queue.h  tick.h  time_utils.h  user_property_key_define.h  utils.h
dll/dll/contract/: contract_interface.h  contract_utils.h  contract_vpn_login.h
dll/dll/db/: CMakeLists.txt  db.cc  db.h  db_utils.h  dict.cc
dll/dll/dht/: CMakeLists.txt  base_dht.cc  base_dht.h  dht_function.cc  dht_function.h
dll/dll/election/: CMakeLists.txt  elect_dht.cc  elect_dht.h  elect_manager.h
dll/dll/init/: command.cc  network_init.cc  network_init.h
dll/dll/ip/: cidr.cc  cidr.h  ip_utils.h  ip_with_country.cc  ip_with_country.h
dll/dll/nat_traverse/: detection.cc  detection.h  nat_utils.h
dll/dll/network/: CMakeLists.txt  bootstrap.cc  dht_manager.cc  dht_manager.h  network_utils.h  route.h  shard_network.h  universal.cc  universal.h  universal_manager.cc  universal_manager.h
dll/dll/root_congress/: CMakeLists.txt  congress_dht.h  congress_init.cc  congress_utils.h  consensus_shard_manager.h
dll/dll/security/: aes.cc  aes.h  challenge.h  commit_point_hash.h  commit_secret.cc  commit_secret.h  ecdh_create_key.cc  multi_sign.cc  private_key.cc  private_key.h  public_key.cc  schnorr.cc  sha256.h  signature.h
dll/dll/statistics/: CMakeLists.txt  statistics.h
dll/dll/sync/: key_value_sync.h  sync_utils.h
dll/dll/transport/: endpoint.cc  ikcp.cc  message_filter.cc  multi_thread.cc  processor.cc  synchro_wait.cc  transport.h  transport_utils.h
dll/dll/uuid/: md5.cc  sha1.cc  strutils.h  xxhash.cc  xxhsum.cc
dll/dll/vss/: vss_manager.h
src/block/: CMakeLists.txt  account_manager.cc  account_manager.h  block_manager.cc  block_manager.h  block_utils.h  genesis_block.cc  genesis_block.h
src/block/proto/: block.pb.cc  block.pb.h  block.proto  block_proto.h
src/broadcast/: CMakeLists.txt  broadcast.cc  broadcast_utils.h  filter_broadcast.cc
src/broadcast/tests/: test_filter_broadcast.cc
src/client/: CMakeLists.txt  client_universal_dht.cc  client_universal_dht.h  client_utils.h  trans_client.cc  trans_client.h  vpn_client.cc  vpn_client.h
src/client/proto/: client.pb.cc  client.pb.h  client.proto  client_proto.h
src/common/: CMakeLists.txt  bitmap.cc  bloom_filter.cc  config.cc  config.h  country_code.h  encode.cc  encode.h  global_info.cc  global_info.h  hash.cc  log.h  parse_args.cc  random.cc  split.h  state_lock.cc  string_utils.cc  thread_safe_queue.h  time_utils.h  user_property_key_define.h  utils.cc  utils.h
src/common/tests/: test_bitmap.cc  test_config.cc  test_parse_args.cc  test_random.cc  test_split.cc  test_string_utils.cc  test_thread_safe_queue.cc  test_tick.cc
src/common/tick/: thread_pool.cc  thread_pool.h  tick.cc
src/contract/: CMakeLists.txt  contract_interface.h  contract_manager.cc  contract_manager.h  contract_pay_for_vpn.cc  contract_pay_for_vpn.h  contract_utils.h  contract_vpn_client_login.cc  contract_vpn_client_login.h  contract_vpn_login.cc  contract_vpn_login.cpp  contract_vpn_login.h  contract_vpn_svr_bandwidth.cc  contract_vpn_svr_bandwidth.h
src/contract/proto/: contract.pb.cc  contract.pb.h  contract_proto.h
src/db/tests/: CMakeLists.txt  test_dict.cc
src/dht/: CMakeLists.txt  base_dht.cc  base_dht.h  dht_function.cc  dht_key.cc  dht_key.h  dht_utils.h  node.h
src/dht/proto/: dht.pb.cc  dht.pb.h  dht.proto  dht_proto.cc  dht_proto.h
src/election/: CMakeLists.txt  elect_dht.cc  elect_manager.cc  elect_manager.h  elect_node.cc  elect_node.h  elect_utils.h
src/election/proto/: elect.pb.cc  elect.pb.h  elect.proto  elect_proto.cc
src/init/: CMakeLists.txt  command.cc  command.h  init_utils.h  network_init.cc  network_init.h  update_vpn_init.cc  update_vpn_init.h
src/json2pb/: CMakeLists.txt  json2pb.cc  test.pb.cc  test.pb.h
src/limit/: CMakeLists.txt  limit_interface.h  limit_utils.h  tocken_bucket.cc  tocken_bucket.h
src/nat_traverse/: CMakeLists.txt  detection.cc  detection.h
src/nat_traverse/proto/: nat.pb.cc  nat.pb.h  nat.proto  nat_proto.h
src/security/: CMakeLists.txt  aes.cc  aes.h  challenge.cc  commit_point.cc  commit_point.h  commit_point_hash.cc  commit_secret.cc  crypto_utils.cc  crypto_utils.h  curve.h  ecdh_create_key.cc  ecdh_create_key.h  multi_sign.cc  multi_sign.h  private_key.cc  public_key.cc  public_key.h  response.cc  response.h  schnorr.cc  schnorr.h  security_string_trans.cc  security_string_trans.h  sha256.h  signature.cc
src/security/tests/: test_multi_sign.cc
src/services/: CMakeLists.txt  account_with_secret.cc  account_with_secret.h
src/services/proto/: service.pb.cc  service.pb.h  service.proto  service_proto.h
src/services/tests/: CMakeLists.txt  tcp_echo_client.cc  test_shadowsocks_proxy.cc
src/services/vpn_route/: route_tcp.cc  route_tcp.h  vpn_route_utils.h
src/services/vpn_server/: ev_loop_manager.cc  resolv.c  (+8 more)
src/transport/: CMakeLists.txt  client_relay.cc  client_relay.h  endpoint.cc  endpoint.h  message_filter.cc  multi_thread.cc  multi_thread.h  processor.cc  processor.h  synchro_wait.cc  transport.h  transport_utils.h
(+306 files in other folders)
